@@ -791,6 +791,10 @@ const char *tags[] = {
 	"vifm-m",
 	"vifm-m_/",
 	"vifm-m_:",
+	"vifm-m_:cnew",
+	"vifm-m_:cnewer",
+	"vifm-m_:col",
+	"vifm-m_:colder",
 	"vifm-m_:exi",
 	"vifm-m_:exit",
 	"vifm-m_:noh",
